Applied Jarkko's memory saving patch that drops Tokens while parsing. Review and specific tests still in progress, but already functionnal. One change from the patch: String interning straregy has been made a boolean configuration property.
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@1753788 13f79535-47bb-0310-9956-ffa450edef68