@@ -21,6 +21,7 @@ package org.apache.velocity.runtime.parser.node;
 
 import org.apache.velocity.context.InternalContextAdapter;
 import org.apache.velocity.exception.MethodInvocationException;
+import org.apache.velocity.exception.TemplateInitException;
 import org.apache.velocity.runtime.parser.Parser;
 import org.apache.velocity.util.StringUtils;
 
@@ -136,10 +137,22 @@ public class ASTIntegerRange extends SimpleNode
 
         for (int i = 0; i < nbrElements; i++)
         {
-            elements.add(new Integer(value));
+            elements.add(Integer.valueOf(value));
             value += delta;
         }
 
         return elements;
     }
+    
+    /**
+     * @throws TemplateInitException
+     * @see org.apache.velocity.runtime.parser.node.Node#init(org.apache.velocity.context.InternalContextAdapter, java.lang.Object)
+     */
+    public Object init( InternalContextAdapter context, Object data) throws TemplateInitException
+    {
+    	Object obj = super.init(context, data);
+    	cleanupParserAndTokens(); // drop reference to Parser and all JavaCC Tokens
+    	return obj;
+    }
+
 }
